--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-places-autocomplete": "^7.3.0",
+    "react-widgets": "^5.8.4",
+    "use-places-autocomplete": "^4.0.0"
   }
 }
